--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "mongoose": "^9.0.2",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
